--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1097,7 +1097,7 @@ def frontlist(sort = "hot", page = 1):
 
                 <div class="col col-md-6">
 
-                    <a href="/signup" class="btn btn-primary bt-lg">Join Ruqqus</a>
+                    <a href="/signup" class="btn btn-primary btn-lg">Join Ruqqus</a>
 
                 </div>
 
