--- a/ruqqus/templates/submit.html
+++ b/ruqqus/templates/submit.html
@@ -74,7 +74,7 @@
                     </div>
 
 
-                    <div class="row no-gutters">
+                    <div class="row no-gutters mb-3">
 
                         <div class="col-12">
 
@@ -119,7 +119,7 @@
 
                                     </div>
 
-                                    <div class="footer border-top">
+                                    <div class="footer">
 
                                         <div class="d-flex">
 
