--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -14594,6 +14594,15 @@ pre .clo, pre .opn, pre .pun, code .clo, code .opn, code .pun {
     font-weight: 500;
   }
 
+  #submit .submission .body {
+    padding: 0;
+  }
+
+  #submit .submission .footer {
+    background: transparent;
+    padding: 1rem 0;
+  }
+
   .footer .list-inline-item {
     line-height: 3;
   }
