--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -14589,16 +14589,16 @@ pre .clo, pre .opn, pre .pun, code .clo, code .opn, code .pun {
     line-height: normal;
   }
 
-  #thread .post-title {
+  .post-title {
     font-size: 16px;
     font-weight: 500;
   }
 
-  #submit .submission .body {
+  .submission .body {
     padding: 0;
   }
 
-  #submit .submission .footer {
+  .submission .footer {
     background: transparent;
     padding: 1rem 0;
   }
