--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -2157,16 +2157,16 @@ body {
     line-height: normal;
 }
 
-#thread .post-title {
+.post-title {
     font-size: 16px;
     font-weight: $font-weight-medium;
 }
 
-#submit .submission .body {
+.submission .body {
     padding: 0;
 }
 
-#submit .submission .footer {
+.submission .footer {
     background: transparent;
     padding: 1rem 0;
 }
