--- a/ruqqus/templates/submit.html
+++ b/ruqqus/templates/submit.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body id="#submit">
+<body id="submit">
 
   <!-- Navigation -->
 {% include "header.html" %}
@@ -56,7 +56,7 @@
 
                 <p class="text-muted">The first step to making a quality post is choosing an interesting title!</p>
 
-                <div class="bg-white shadow-sm rounded">
+                <div class="bg-md-white shadow-sm shadow-sm-0 rounded">
 
                     <!-- Submission type toggle -->
 
