--- a/ruqqus/templates/notifications.html
+++ b/ruqqus/templates/notifications.html
@@ -26,6 +26,26 @@
     <script src="/assets/js/comment_modding.js"></script>
     {% endblock %}
 
+    {% if v %}
+
+    <script>
+        function post(url, callback, errortext) {
+          var xhr = new XMLHttpRequest();
+          xhr.open("POST", url, true);
+          var form = new FormData()
+          form.append("formkey", "{{ v.formkey }}");
+          xhr.withCredentials=true;
+          xhr.onload=callback
+          xhr.onerror=function(){alert(errortext)}
+          xhr.send(form);
+      }
+      function formkey() {
+          return '{{ v.formkey }}';
+      }
+  </script>
+
+  {% endif %}
+
 </head>
 
 <body id="notifications">
@@ -67,7 +87,7 @@
 
                     <div class="col-12">
 
-                    {% if v.notifications_count>=1 %}
+                        {% if v.notifications_count>=1 %}
                         {% else %}
                         <div class="text-center py-7 py-md-8">
 
