--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -2117,7 +2117,7 @@ body {
     font-size: $font-size-base;
 }
 
-#thread, #submit {
+#thread, #submit, #error-401, #error-403, #error-404, #error-405, #error-500 {
     background-color: $white;
 }
 
