--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -12249,7 +12249,7 @@ body {
 }
 
 #error-400 .sidebar, #error-401 .sidebar, #error-404 .sidebar, #error-404 .sidebar, #error-405 .sidebar, #error-500 .sidebar {
-  display: none;
+  display: none !important;
 }
 
 #message .sidebar, #message-success .sidebar {
@@ -13741,6 +13741,12 @@ ul.comment-section {
 
 .footer.footer-dark a:hover, .footer.footer-dark a:focus, .footer.footer-dark a:active {
   color: #ffffff;
+}
+
+.empty-state-img {
+  width: 200px;
+  opacity: 0.35;
+  filter: brightness(0);
 }
 
 .border-top {
