--- a/ruqqus/templates/401.html
+++ b/ruqqus/templates/401.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="text-center my-8">
 
-	<img src="https://imgur.com/S9CQ6OD.png" class="mb-3" class="empty-state-img" alt="empty state">
+	<img src="https://imgur.com/S9CQ6OD.png" class="empty-state-img mb-3" alt="empty state">
 	<div class="font-weight-bold text-muted mb-4">You must be logged in to view this page.</div>
 	<div><a href="/signup" class="btn btn-primary mb-2">Create an account</a></div>
 	<div><a href="/login" class="text-muted text-small">Or sign in</a></div>
