--- a/ruqqus/templates/sign_up.html
+++ b/ruqqus/templates/sign_up.html
@@ -70,9 +70,9 @@
 
                         <div id="register-form" class="">
 
-                            <h1 class="h3 font-weight-normal text-center mb-5">Create your account.</h1>
+                            <h1 class="h4 font-weight-normal text-center mb-md-5">Create your account.</h1>
 
-                            <form action="/signup" method="post" class="mt-3" id="signup">
+                            <form action="/signup" method="post" class="mt-md-3" id="signup">
 
 				<span class="text-danger">{{ error }}</span><br>
 
