--- a/ruqqus/templates/login.html
+++ b/ruqqus/templates/login.html
@@ -70,7 +70,7 @@
 
                     <div id="login-form" class="">
 
-                        <h1 class="h3 font-weight-normal text-center mb-5 d-none d-md-block">Welcome back.</h1>
+                        <h1 class="h4 font-weight-normal text-center mb-md-5">Welcome back.</h1>
 
                         {% if failed %}
                         <div class="alert alert-danger alert-dismissible fade show d-flex my-3" role="alert">
@@ -86,7 +86,7 @@
                     </div>
                     {% endif %}
 
-                    <form action="/login" method="post" class="mt-3" id="login">
+                    <form action="/login" method="post" class="mt-md-3" id="login">
 
                         <label for="username" class="mt-3">Email Address</label>
 
