--- a/ruqqus/templates/authforms.html
+++ b/ruqqus/templates/authforms.html
@@ -68,14 +68,14 @@
                         <a href="/" class="text-decoration-none"><span class="h3 text-primary">ruqqus</span></a>
                     </div>
 
-                    <h1 class="h3 font-weight-normal text-center mb-5">{% block authtitle %}{% endblock %}</h1>
+                    <h1 class="h4 font-weight-normal text-center mb-md-5">{% block authtitle %}{% endblock %}</h1>
 
 			{% if error %}
 				<div class="alert alert-danger alert-dismissible fade show d-flex my-3" role="alert">
                           <i class="fas fa-exclamation-circle my-auto"></i>
-                          <div>
+                          <span>
                           {{ error }}
-                          </div>
+                          </span>
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true"><i class="far fa-times"></i></span>
                         </button>
@@ -84,9 +84,9 @@
 			{% if msg %}
 				<div class="alert alert-success alert-dismissible fade show d-flex my-3" role="alert">
                           <i class="fas fa-info-circle my-auto" aria-hidden="true"></i>
-                          <div>
+                          <span>
                           {{ msg }}
-                          </div>
+                          </span>
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true"><i class="far fa-times"></i></span>
                         </button>
