fa ghost hover animation

--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -13749,6 +13749,35 @@ ul.comment-section {
   filter: brightness(0);
 }
 
+.ghost {
+  -webkit-animation: ghost 2s infinite alternate;
+  animation: ghost 2s infinite alternate;
+}
+
+@-webkit-keyframes ghost {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+@keyframes ghost {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+@-moz-keyframes ghost {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
 .border-top {
   border-top: 1px solid #E6E6E6 !important;
 }
