--- a/ruqqus/templates/errors/404.html
+++ b/ruqqus/templates/errors/404.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="text-center my-8">
 
-    <img src="https://imgur.com/S9CQ6OD.png" class="empty-state-img mb-3" alt="empty state">
+    <i class="fad fa-ghost text-muted ghost" style="font-size: 3rem;"></i>
     <div class="font-weight-bold text-muted mb-4">404. Sorry, this page doesn't exist in the cyberspace.</div>
     <div><a href="/" class="btn btn-primary">Take me home</a></div>
 
