--- a/ruqqus/templates/errors/404.html
+++ b/ruqqus/templates/errors/404.html
@@ -7,9 +7,9 @@
 {% block pagetype %}error-404{% endblock %}
 
 {% block content %}
-<div class="text-center my-8">
+<div class="text-center px-3 my-8">
 
-    <i class="fad fa-ghost text-muted ghost" style="font-size: 3rem;"></i>
+    <i class="fad fa-ghost text-muted ghost mb-5" style="font-size: 5rem;"></i>
     <div class="font-weight-bold text-muted mb-4">404. Sorry, this page doesn't exist in the cyberspace.</div>
     <div><a href="/" class="btn btn-primary">Take me home</a></div>
 
