--- a/ruqqus/templates/errors/401.html
+++ b/ruqqus/templates/errors/401.html
@@ -7,7 +7,7 @@
 {% block pagetype %}error-401{% endblock %}
 
 {% block content %}
-<div class="text-center my-8">
+<div class="text-center px-3 my-8">
 
 	<img src="https://imgur.com/S9CQ6OD.png" class="empty-state-img mb-3" alt="empty state">
 	<div class="font-weight-bold text-muted mb-4">You must be logged in to view this page.</div>
