--- a/ruqqus/assets/style/main.css
+++ b/ruqqus/assets/style/main.css
@@ -13252,6 +13252,11 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
   margin-right: 0;
 }
 
+.close .far, .close .fab, .close .fal, .close .fas {
+  font-size: 1.25rem;
+  vertical-align: super;
+}
+
 .page-link {
   font-weight: 600;
 }
