--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -169,14 +169,14 @@
 
       </div>
 
-      <div class="post-filter">
+      <div class="post-filter d-none">
         <span>Sort By:</span>
         <span class="dropdown">
           <a class="dropdown-toggle" href="#" role="button" id="dropdownFrom" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">New</a>
 
           <span class="dropdown-menu border-0 shadow" id="dropdownMenuFrom" aria-labelledby="dropdownFrom">
             <a class="dropdown-item" href="#">Top</a>
-            <a class="dropdown-item" href="#">Fiery</a>
+            <a class="dropdown-item" href="#">Disputed</a>
             <a class="dropdown-item" href="#">Based</a>
           </span>
         </span>
