--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1037,11 +1037,18 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     margin: auto;
     text-align: center;
     color: #fff;
+    -moz-transform: rotate(-25deg);
+    -ms-transform: rotate(-25deg);
+    -o-transform: rotate(-25deg);
+    -webkit-transform: rotate(-25deg);
+    transform: rotate(-25deg);
 }
 
 .profile-pic .letter {
     line-height: 3.5rem;
     font-size: $font-size-lg;
+    font-weight: $font-weight-bold;
+    text-transform: uppercase;
 }
 
 .navbar .navbar-nav .profile-pic {
