--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1111,25 +1111,25 @@ return f"{years} year{'s' if years>1 else ''} ago"
 <footer class="footer bg-dark py-5">
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col">
+        <div class="col-3">
           <span class="h4 text-white">ruqqus</span>
     </div>
-    <div class="col-4">
-        <ul class="text-small text-muted font-weight-bold mb-0">
+    <div class="col-3">
+        <ul class="no-bullets text-small text-muted font-weight-bold mb-0">
             <li><a href="/about">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Press</a></li>
         </ul>
     </div>
-    <div class="col-4">
-        <ul class="text-center text-small text-muted font-weight-bold mb-0">
+    <div class="col-3">
+        <ul class="no-bullets text-center text-small text-muted font-weight-bold mb-0">
             <li><a href="https://www.twitter.com/ruqqus">Twitter</a></li>
             <li><a href="https://ruqqus.org/contribute">Github</a></li>
             <li><a href="#">Donate</a></li>
         </ul>
     </div>
-    <div class="col-4">
-        <ul class="text-center text-small text-muted font-weight-bold mb-0">
+    <div class="col-3">
+        <ul class="no-bullets text-center text-small text-muted font-weight-bold mb-0">
             <li><a href="/about/terms">Terms</a></li>
             <li><a href="/about/privacy">Privacy Policy</a></li>
             <li>&copy; 2019 Ruqqus</li>
