--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1726,6 +1726,15 @@ ul.comment-section {
 #page .footer a {
     text-decoration: none;
     color: $white;
+    opacity: 0.8;
+}
+
+#page .footer a:hover, #page .footer a:focus, #page .footer a:active {
+    opacity: 1;
+}
+
+#page .footer li {
+    padding: .25rem 0;
 }
 
 .footer .list-inline-item {
