--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1725,12 +1725,11 @@ ul.comment-section {
 
 #page .footer a {
     text-decoration: none;
-    color: $white;
-    opacity: 0.8;
+    color: rgba(255, 255, 255, 0.5);
 }
 
 #page .footer a:hover, #page .footer a:focus, #page .footer a:active {
-    opacity: 1;
+    color: $white;
 }
 
 #page .footer li {
