--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1111,39 +1111,43 @@ return f"{years} year{'s' if years>1 else ''} ago"
 <footer class="footer bg-dark py-5">
     <div class="container">
       <div class="row justify-content-center">
-          <div class="col col-md-4">
+          <div class="col col-md-2">
               <div class="row">
                 <div class="col-3">
                   <span class="h4 text-white">ruqqus</span>
               </div>
           </div>
       </div>
-      <div class="col col-md-8">
+      <div class="col col-md-10">
           <div class="row">
-              <div class="col-3">
+              <div class="col">
+              <h4 class="h5">The Platform</h4>
                 <ul class="no-bullets text-small">
                     <li><a href="/about">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Press</a></li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col">
+            <h4 class="h5">Connect</h4>
                 <ul class="no-bullets text-small">
                     <li><a href="https://www.twitter.com/ruqqus">Twitter</a></li>
                     <li><a href="https://ruqqus.org/contribute">Github</a></li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col">
+                <h4 class="h5">Get involved</h4>
                 <ul class="no-bullets text-small">
                     <li><a href="#">Donate</a></li>
                     <li><a href="https://www.ruqqus.org">Contribute</a></li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col">
+            <h4 class="h5">Legal</h4>
                 <ul class="no-bullets text-small">
                     <li><a href="/about/terms">Terms</a></li>
                     <li><a href="/about/privacy">Privacy Policy</a></li>
-                    <li>&copy; 2019 Ruqqus</li>
+                    <li class="text-white text-small-extra opacity-25">&copy; 2019 Ruqqus</li>
                 </ul>
             </div>
         </div>
