--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1122,7 +1122,7 @@ return f"{years} year{'s' if years>1 else ''} ago"
           <div class="row">
               <div class="col">
               <h4 class="h5">The Platform</h4>
-                <ul class="no-bullets text-small">
+                <ul class="no-bullets text-small pl-0">
                     <li><a href="/about">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Press</a></li>
@@ -1130,21 +1130,21 @@ return f"{years} year{'s' if years>1 else ''} ago"
             </div>
             <div class="col">
             <h4 class="h5">Connect</h4>
-                <ul class="no-bullets text-small">
+                <ul class="no-bullets text-small pl-0">
                     <li><a href="https://www.twitter.com/ruqqus">Twitter</a></li>
                     <li><a href="https://ruqqus.org/contribute">Github</a></li>
                 </ul>
             </div>
             <div class="col">
                 <h4 class="h5">Get involved</h4>
-                <ul class="no-bullets text-small">
+                <ul class="no-bullets text-small pl-0">
                     <li><a href="#">Donate</a></li>
                     <li><a href="https://www.ruqqus.org">Contribute</a></li>
                 </ul>
             </div>
             <div class="col">
             <h4 class="h5">Legal</h4>
-                <ul class="no-bullets text-small">
+                <ul class="no-bullets text-small pl-0">
                     <li><a href="/about/terms">Terms</a></li>
                     <li><a href="/about/privacy">Privacy Policy</a></li>
                     <li class="text-white text-small-extra opacity-25">&copy; 2019 Ruqqus</li>
