--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1114,14 +1114,15 @@ return f"{years} year{'s' if years>1 else ''} ago"
           <div class="col col-md-2">
               <div class="row">
                 <div class="col-3">
-                  <span class="h4 text-white">ruqqus</span>
+                  <h5 class="h3 text-white">ruqqus</h5>
+                  <h6 class="text-white text-small">The social platform for uncensored discourse.</h6>
               </div>
           </div>
       </div>
       <div class="col col-md-10">
           <div class="row">
               <div class="col">
-              <h4 class="h6 text-white">The Platform</h4>
+              <h6 class="text-white">The Platform</h6>
                 <ul class="no-bullets text-small pl-0">
                     <li><a href="/about">About</a></li>
                     <li><a href="#">Contact</a></li>
@@ -1129,21 +1130,21 @@ return f"{years} year{'s' if years>1 else ''} ago"
                 </ul>
             </div>
             <div class="col">
-            <h4 class="h6 text-white">Connect</h4>
+            <h6 class="text-white">Connect</h6>
                 <ul class="no-bullets text-small pl-0">
                     <li><a href="https://www.twitter.com/ruqqus">Twitter</a></li>
                     <li><a href="https://ruqqus.org/contribute">Github</a></li>
                 </ul>
             </div>
             <div class="col">
-                <h4 class="h6 text-white">Get involved</h4>
+                <h6 class="text-white">Get involved</h6>
                 <ul class="no-bullets text-small pl-0">
                     <li><a href="#">Donate</a></li>
                     <li><a href="https://www.ruqqus.org">Contribute</a></li>
                 </ul>
             </div>
             <div class="col">
-            <h4 class="h6 text-white">Legal</h4>
+            <h6 class="text-white">Legal</h6>
                 <ul class="no-bullets text-small pl-0">
                     <li><a href="/about/terms">Terms</a></li>
                     <li><a href="/about/privacy">Privacy Policy</a></li>
