--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1114,8 +1114,8 @@ return f"{years} year{'s' if years>1 else ''} ago"
           <div class="col col-md-2">
               <div class="row">
                 <div class="col-3">
-                  <h5 class="h3 text-white">ruqqus</h5>
-                  <h6 class="text-white text-small">The social platform for uncensored discourse.</h6>
+                  <img src="/assets/images/logo/ruqqus_logo_white.png" style="width: 35px" class="mb-3">
+                  <p class="text-white">The social platform for uncensored discourse.</p>
               </div>
           </div>
       </div>
