--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1111,15 +1111,15 @@ return f"{years} year{'s' if years>1 else ''} ago"
 <footer class="footer bg-dark py-5">
     <div class="container">
       <div class="row justify-content-center">
-          <div class="col col-md-2">
+          <div class="col col-md-3">
               <div class="row">
-                <div class="col-3">
+                <div class="col">
                   <img src="/assets/images/logo/ruqqus_logo_white.png" style="width: 35px" class="mb-3">
                   <p class="text-white">The social platform for uncensored discourse.</p>
               </div>
           </div>
       </div>
-      <div class="col col-md-10">
+      <div class="col col-md-9">
           <div class="row">
               <div class="col">
               <h6 class="text-white">The Platform</h6>
