--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -185,7 +185,7 @@
                     <li class="list-inline-item mr-3">
                         <i class="fab fa-sass"></i>
                     </li>
-                    <li>
+                    <li class="list-inline-item mr-3">
                         <i class="fab fa-js"></i>
                     </li>
                 </ul>
