--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1122,15 +1122,15 @@ return f"{years} year{'s' if years>1 else ''} ago"
       <div class="col col-md-9">
           <div class="row">
               <div class="col">
-              <h6 class="text-white">The Platform</h6>
-                <ul class="no-bullets text-small pl-0">
+                  <h6 class="text-white">The Platform</h6>
+                  <ul class="no-bullets text-small pl-0">
                     <li><a href="/about">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Press</a></li>
                 </ul>
             </div>
             <div class="col">
-            <h6 class="text-white">Connect</h6>
+                <h6 class="text-white">Connect</h6>
                 <ul class="no-bullets text-small pl-0">
                     <li><a href="https://www.twitter.com/ruqqus">Twitter</a></li>
                     <li><a href="https://ruqqus.org/contribute">Github</a></li>
@@ -1144,14 +1144,18 @@ return f"{years} year{'s' if years>1 else ''} ago"
                 </ul>
             </div>
             <div class="col">
-            <h6 class="text-white">Legal</h6>
+                <h6 class="text-white">Legal</h6>
                 <ul class="no-bullets text-small pl-0">
                     <li><a href="/about/terms">Terms</a></li>
                     <li><a href="/about/privacy">Privacy Policy</a></li>
-                    <li class="text-white text-small-extra opacity-25">&copy; 2019 Ruqqus</li>
                 </ul>
             </div>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <span class="text-white text-small-extra opacity-25">&copy; 2019 Ruqqus</span>
     </div>
 </div>
 </div>
