--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1110,7 +1110,7 @@ return f"{years} year{'s' if years>1 else ''} ago"
 
 <footer class="footer bg-dark py-5">
     <div class="container">
-      <div class="row justify-content-center">
+    <div class="row mb-5">
           <div class="col col-md-3">
               <div class="row">
                 <div class="col">
