--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -95,7 +95,7 @@
 {% if u.badges %}
 <div class="sidebar-section sidebar-profile-badges">
   <div class="title">Badges</div>
-  <div class="col py-3 px-0">
+  <div class="col text-center">
     {% for bp in u.badge_pairs %}
     {% include "badge_pair.html" %}
     {% else %}
