--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -99,7 +99,7 @@
     {% for bp in u.badge_pairs %}
     {% include "badge_pair.html" %}
     {% else %}
-    <div class="px-3">Nothing yet!</div>
+    <p class="text-small text-muted">Nothing yet!</p>
 
     {% endfor %}
   </div>
