--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -95,11 +95,11 @@
 {% if u.badges %}
 <div class="sidebar-section sidebar-profile-badges">
   <div class="title">Badges</div>
-  <div class="col text-center">
+  <div class="col py-3 px-0">
     {% for bp in u.badge_pairs %}
     {% include "badge_pair.html" %}
     {% else %}
-    <p class="text-small text-muted">Nothing yet!</p>
+    <div class="px-3">Nothing yet!</div>
 
     {% endfor %}
   </div>
