--- a/ruqqus/templates/badge.html
+++ b/ruqqus/templates/badge.html
@@ -1,14 +1,14 @@
 <div class="col text-center px-0" title="{{ b.text }}">
-<div class="mb-1">
+<div class="row no-gutters d-block">
 {% if b.url %}
 <a href="{{ b.url }}">
-<img style="width: 45px; height: 47px" src="{{ b.path }}">
+<img style="width: 50px; height: 50px" src="{{ b.path }}">
 </a>
 {% else %}
-<img style="width: 45px; height: 47px" src="{{ b.path }}">
+<img style="width: 50px; height: 50px" src="{{ b.path }}">
 {% endif %}
 </div>
-<span class="text-small-extra">
+<div class="row no-gutters d-block">
 {{ b.name }}
 </div>
 </div>
