--- a/ruqqus/templates/badge.html
+++ b/ruqqus/templates/badge.html
@@ -2,13 +2,13 @@
 <div class="row no-gutters d-block">
 {% if b.url %}
 <a href="{{ b.url }}">
-<img style="width: 50px; height: 50px" src="{{ b.path }}">
+<img style="width: 45px; height: 47px" src="{{ b.path }}">
 </a>
 {% else %}
-<img style="width: 50px; height: 50px" src="{{ b.path }}">
+<img style="width: 45px; height: 47px" src="{{ b.path }}">
 {% endif %}
 </div>
-<div class="row no-gutters d-block">
+<div class="text-small-extra">
 {{ b.name }}
 </div>
 </div>
