--- a/ruqqus/templates/badge.html
+++ b/ruqqus/templates/badge.html
@@ -1,5 +1,5 @@
 <div class="col text-center px-0" title="{{ b.text }}">
-<div class="row no-gutters d-block">
+<div class="mb-1">
 {% if b.url %}
 <a href="{{ b.url }}">
 <img style="width: 45px; height: 47px" src="{{ b.path }}">
