--- a/ruqqus/templates/badge.html
+++ b/ruqqus/templates/badge.html
@@ -1,4 +1,4 @@
-<div class="col text-center px-0" title="{{ b.text }}">
+<div class="col text-center" title="{{ b.text }}">
 <div class="mb-1">
 {% if b.url %}
 <a href="{{ b.url }}">
