--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -62,9 +62,12 @@
 <div class="modal fade d-md-none" id="actionsModal" tabindex="-1" role="dialog" aria-labelledby="actionsModalTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <button type="button" class="close position-absolute p-3" data-dismiss="modal" aria-label="Close" style="right: 0; z-index: 10;">
+      <div class="modal-header">
+        <h5 class="modal-title">More options</h5>
+        <button type="button" class="close position-absolute p-3" data-dismiss="modal" aria-label="Close" style="right: 0; z-index: 10;">
         <span aria-hidden="true"><i class="far fa-times"></i></span>
       </button>
+  </div>
       <div class="modal-body">
         <ul class="list-group post-actions">
           <li class="list-group-item d-none"><a href="#" class="d-block"><i class="fas fa-save"></i>Save</a></li>
