--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -63,8 +63,8 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">More options</h5>
-        <button type="button" class="close position-absolute p-3" data-dismiss="modal" aria-label="Close" style="right: 0; z-index: 10;">
+        <h5 class="modal-title h6">More options</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true"><i class="far fa-times"></i></span>
       </button>
   </div>
