--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1152,10 +1152,12 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
 
 .modal .post-actions a {
     color: $black;
+    font-size: $font-size-base;
 }
 
 .modal .post-actions .fa, .modal .post-actions .fas, .modal .post-actions .far {
     width: 1.25rem;
+    font-size: $font-size-base;
 }
 
 .post-actions {
