--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1369,10 +1369,21 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
 
 .modal .comment-actions .list-group-item {
     border: none;
+    border-radius: $border-radius;
 }
 
 .modal .comment-actions .list-group-item:focus, .modal .comment-actions .list-group-item:hover {
     background-color: $gray-200;
+}
+
+.modal .comment-actions a {
+    color: $black;
+    font-size: $font-size-base;
+}
+
+.modal .comment-actions .fa, .modal .comment-actions .fas, .modal .comment-actions .far {
+    width: 1.25rem;
+    font-size: $font-size-base;
 }
 
 .comment-actions {
