<li class="list-group-item">

--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -224,8 +224,8 @@
           </div>
           <div class="modal-body">
             <div class="list-group profile-actions">
-              <a href="/settings/profile#bio" class="list-group-item list-group-item-action"><i class="fas fa-paper-plane mr-2"></i>Message</a>
-              <a href="/settings/security" class="list-group-item list-group-item-action"><i class="fas fa-flag mr-2"></i>Flag</a>
+              <li class="list-group-item"><a href="/settings/profile#bio" class="d-block"><i class="fas fa-paper-plane mr-2"></i>Message</a></li>
+              <li class="list-group-item"><a href="/settings/security" class="d-block"><i class="fas fa-flag mr-2"></i>Flag</a></li>
             </div>
           </div>
         </div>
