--- a/ruqqus/templates/home.html
+++ b/ruqqus/templates/home.html
@@ -137,7 +137,7 @@
 
     </div>
 
-    <div class="post-filter">
+    <div class="post-filter d-none">
       <span>From:</span>
       <span class="dropdown">
         <a class="dropdown-toggle" href="#" role="button" id="dropdownFrom" data-toggle="dropdown"
