--- a/ruqqus/templates/notifications.html
+++ b/ruqqus/templates/notifications.html
@@ -98,11 +98,11 @@
 
                             <img src="https://imgur.com/Ca3Sd7H.png" class="mb-3" style="width: 300px; opacity: .35; filter: brightness(0);" alt="empty state">
 
-                            <div class="font-weight-bold text-muted">Nothing in your inbox yet.</div>
+                            <div class="font-weight-bold text-muted">Nothing new in your inbox yet.</div>
                             <div class="text-small text-muted mb-3">When someone comments or replies, it will show up here.</div>
                             <a href="/" class="btn btn-primary">Go to frontpage</a>
                         </div>
-                        
+
                             {% endfor %}
 
                         </div>
