--- a/ruqqus/templates/errors/404.html
+++ b/ruqqus/templates/errors/404.html
@@ -11,7 +11,7 @@
 
     <i class="fad fa-ghost text-muted ghost mb-5" style="font-size: 5rem;"></i>
     <div class="font-weight-bold text-muted mb-3">404. Sorry, this page doesn't exist in the cyberspace.</div>
-    <div><a href="/" class="btn btn-primary">Take me home</a></div>
+    <div><a href="/" class="btn btn-primary">Go to frontpage</a></div>
 
 </div>
 {% endblock %}
