--- a/ruqqus/templates/errors/405.html
+++ b/ruqqus/templates/errors/405.html
@@ -1,12 +1,17 @@
 {% extends "default.html" %}
 
-{% block pagetype %}error-405{% endblock %}
-
 {% block title %}
 <title>405 Method Not ALlowed</title>
 {% endblock %}
 
+{% block pagetype %}error-405{% endblock %}
+
 {% block content %}
-<h1>405 Method Not Allowed</h1>
-<p>Careful, stranger. The internet gnomes don’t take kindly to outsiders that don’t follow their customs.</p>
+<div class="text-center px-3 my-8">
+
+	<img src="/assets/images/illustrations/key.png" class="empty-state-img mb-3" alt="empty state">
+	<div class="font-weight-bold text-muted mb-3">405 Method Not Allowed</div>
+	<div><a href="/" class="btn btn-primary">Go to frontpage</a></div>
+
+</div>
 {% endblock %}
