--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -266,7 +266,7 @@
     {% else %}
     <div class="text-center py-7 py-md-8">
 
-      <img src="https://imgur.com/7qp4UpX.png" class="mb-3" style="width: 300px; opacity: .35; filter: brightness(0);" alt="empty state">
+      <img src="/assets/images/illustrations/search.png" class="empty-state-img mb-3" alt="empty state">
 
       {% if v and v.id == u.id %}
       <div class="font-weight-bold text-muted">You haven't made a ruckus.</div>
