--- a/ruqqus/templates/userpage.html
+++ b/ruqqus/templates/userpage.html
@@ -266,14 +266,14 @@
     {% else %}
     <div class="text-center py-7 py-md-8">
 
-      <img src="/assets/images/illustrations/search.png" class="empty-state-img mb-3" alt="empty state">
+      <img src="/assets/images/illustrations/searching.png" class="empty-state-img mb-3" alt="empty state">
 
       {% if v and v.id == u.id %}
       <div class="font-weight-bold text-muted">You haven't made a ruckus.</div>
       <div class="text-small text-muted mb-3">Your posts will show up here.</div>
       <a href="/submit" class="btn btn-primary">Create post now</a>
       {% else %}
-      <div class="font-weight-bold text-muted">Umm, there's nothing here.</div>
+      <div class="font-weight-bold text-muted">No posts here...</div>
       <div class="text-small text-muted">@{{ u.username }} hasn't made a ruckus yet.</div>
       {% endif %}
     </div>
