--- a/ruqqus/templates/userpage_comments.html
+++ b/ruqqus/templates/userpage_comments.html
@@ -132,14 +132,14 @@
     {% else %}
     <div class="text-center py-7 py-md-8">
 
-      <img src="https://imgur.com/7qp4UpX.png" class="mb-3" style="width: 300px; opacity: .35; filter: brightness(0);" alt="empty state">
+      <img src="/assets/images/illustrations/searching.png" class="empty-state-img mb-3" alt="empty state">
 
       {% if v and v.id == u.id %}
       <div class="font-weight-bold text-muted">You haven't made a ruckus.</div>
       <div class="text-small text-muted mb-3">Your comments will show up here.</div>
       <a href="/" class="btn btn-primary">Go to frontpage</a>
       {% else %}
-      <div class="font-weight-bold text-muted">Umm, there's nothing here.</div>
+      <div class="font-weight-bold text-muted">No comments here...</div>
       <div class="text-small text-muted">@{{ u.username }} hasn't made a ruckus yet.</div>
       {% endif %}
     </div>
