--- a/ruqqus/templates/userpage_banned.html
+++ b/ruqqus/templates/userpage_banned.html
@@ -141,10 +141,10 @@
 
     <div class="text-center py-7 py-md-8">
 
-      <img src="https://imgur.com/7qp4UpX.png" class="mb-3" style="width: 300px; opacity: .35; filter: brightness(0);" alt="empty state">
+      <i class="fad fa-ghost text-muted ghost mb-5" style="font-size: 5rem;"></i>
 
 
-      <div class="font-weight-bold text-muted">Sorry, there's no profile here.</div>
+      <div class="font-weight-bold text-muted">Sorry, no profile here...</div>
       <div class="text-small text-muted">This user was either banned or deleted.</div>
 
     </div>
