empty states and time illustration added

--- a/ruqqus/templates/message.html
+++ b/ruqqus/templates/message.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="text-center py-7 py-md-8">
 
-	<img src="https://i.imgur.com/y49lZIX.png" class="mb-3" style="width: 300px; opacity: .35; filter: brightness(0);" alt="empty state">
+	<img src="/assets/images/illustrations/time.png" class="empty-state-img mb-3" alt="empty state">
 	<div class="font-weight-bold text-muted mb-4">{{ title }}</div>
 	<p class="text-muted">{{ text }}</p>
 
