--- a/ruqqus/templates/errors/404.html
+++ b/ruqqus/templates/errors/404.html
@@ -7,11 +7,14 @@
 {% block pagetype %}error-404{% endblock %}
 
 {% block content %}
-<div class="text-center px-3 my-8">
-
-    <i class="fad fa-ghost text-muted ghost mb-5" style="font-size: 5rem;"></i>
-    <div class="font-weight-bold text-muted mb-3">404. Sorry, this page doesn't exist in the cyberspace.</div>
-    <div><a href="/" class="btn btn-primary">Go to frontpage</a></div>
-
+<div class="row justify-content-center">
+	<div class="col-10 col-md-5">
+	<div class="text-center px-3 my-8">
+			<i class="fad fa-ghost text-muted ghost mb-5" style="font-size: 5rem;"></i>
+			<h1 class="h5">404 Page Not Found</h1>
+			<p class="text-muted mb-5">Sorry, the page you were looking for doesn't exist in the cyberspace.</p>
+			<div><a href="/" class="btn btn-primary">Go to frontpage</a></div>
+		</div>
+	</div>
 </div>
 {% endblock %}
