--- a/ruqqus/templates/errors/500.html
+++ b/ruqqus/templates/errors/500.html
@@ -7,20 +7,23 @@
 {% block pagetype %}error-500{% endblock %}
 
 {% block content %}
-<div class="text-center px-3 my-8">
+<div class="row justify-content-center">
+	<div class="col-10 col-md-5">
+		<div class="text-center px-3 my-8">
+			<i class="fad fa-axe-battle text-muted mb-5" style="font-size: 5rem;"></i>
+			<h1 class="h5">500 Internal Server Error</h1>
+			<p class="text-muted mb-5">Something has broken. A master dwarven computersmith has been dispatched to un-break it. Whatever "it" might be.</p>
+			<div><a href="/" class="btn btn-primary">Go to frontpage</a></div>
 
-	<i class="fad fa-bug text-muted mb-5" style="font-size: 5rem;"></i>
-	<div class="font-weight-bold text-muted mb-3">505 Internal Server Error. Something has broken :(</div>
-	<div><a href="/" class="btn btn-primary">Go to frontpage</a></div>
-
-	{% if v %}
-	{% if v.admin_level>3 %}
-	<hr>
-	<pre>
-		{{ e }}
-	</pre>
-	{% endif %}
-	{% endif %}
-
+			{% if v %}
+			{% if v.admin_level>3 %}
+			<hr>
+			<pre>
+				{{ e }}
+			</pre>
+			{% endif %}
+			{% endif %}
+		</div>
+	</div>
 </div>
 {% endblock %}
