--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1111,7 +1111,7 @@ return render_template("home.html", v = v, listing = posts, sort_method = sort_m
 <footer class="footer bg-dark py-5">
     <div class="container">
     <div class="row mb-5">
-          <div class="col col-md-3">
+          <div class="col-6 col-md-3">
               <div class="row">
                 <div class="col">
                   <img src="/assets/images/logo/ruqqus_logo_white.png" style="width: 35px" class="mb-3">
@@ -1119,7 +1119,7 @@ return render_template("home.html", v = v, listing = posts, sort_method = sort_m
               </div>
           </div>
       </div>
-      <div class="col col-md-9">
+      <div class="col-6 col-md-9">
           <div class="row">
               <div class="col">
                   <h6 class="text-white">The Platform</h6>
