--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -39,7 +39,7 @@
             <a class="navbar-brand" href="/">ruqqus</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><i class="fal fa-bars text-dark" style="font-size: 2rem;"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
